--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="login_food_scanner">Login with FoodScanner account</string>
     <string name="login_google_plus">Login with Google+</string>
     <string name="login_facebook">Login with Facebook</string>
+    <string name="login">Login</string>
 
     <string name="Email_prompt">Email</string>
     <string name="password_prompt">Password</string>
