Added meal spinner
Defaults to different meals, based on time of day.

--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -21,4 +21,13 @@
     <string name="title_activity_food_scanner">Food Scanner</string>
     <string name="title_activity_food_adder">Food Adder</string>
 
+    <string-array name="meal_list">
+        <item>Breakfast</item>
+        <item>Brunch</item>
+        <item>Lunch</item>
+        <item>Snack</item>
+        <item>Dinner</item>
+        <item>Dessert</item>
+    </string-array>
+
 </resources>
