--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="action_meal_add">Add Meal</string>
     <string name="action_login">Log In</string>
+    <string name="action_logout">Log Out</string>
 
     <string name="login_food_scanner">Login with FoodScanner account</string>
     <string name="login_google_plus">Login with Google+</string>
