--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="title_activity_meal_details">Meal Details</string>
     <string name="title_activity_food_scanner">Food Scanner</string>
     <string name="title_activity_food_adder">Add Food</string>
+    <string name="title_activity_settings">Settings</string>
 
     <string name="network_error">Error: Network connection failed.</string>
     <string name="generic_error">Error: Please try again.</string>
