Split Activity into two: CameraActivity and PhotoTakerActivity

--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
         <item>Dinner</item>
         <item>Dessert</item>
     </string-array>
+    <string name="title_activity_camera">CameraActivity</string>
 
 </resources>
