--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -20,5 +20,16 @@
     <string name="title_activity_meal_details">Meal Details</string>
     <string name="title_activity_food_scanner">Food Scanner</string>
     <string name="title_activity_food_adder">Food Adder</string>
+    <string name="title_activity_painting">Painting</string>
+
+    <string name="start_new">New</string>
+    <string name="brush">Brush</string>
+    <string name="erase">Erase</string>
+    <string name="save">Save</string>
+    <string name="paint">Paint</string>
+    <string name="title_activity_camera">CameraActivity</string>
+    <string name="pixelButton">Get Pixels</string>
+    <string name="rectangleButton">Done</string>
+    <string name="undoButton">Undo</string>
 
 </resources>
