Added Time Format and Logout Dialog.
The time format button now saves the user's preference and correctly switches the hint on the button.

The logout button now brings up a confirmation dialog

--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_meal_add">Add Meal</string>
     <string name="action_login">Log In</string>
     <string name="action_logout">Log Out</string>
+    <string name="action_logout_confirm">Are you sure you want to logout?</string>
+    <string name="logout_button">LOG OUT</string>
 
     <string name="login_food_scanner">Login with FoodScanner account</string>
     <string name="login_google_plus">Login with Google+</string>
