--- a/FoodScanner/app/src/main/res/values/strings.xml
+++ b/FoodScanner/app/src/main/res/values/strings.xml
@@ -25,11 +25,19 @@
     <string name="title_activity_food_scanner">Food Scanner</string>
     <string name="title_activity_food_adder">Add Food</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_settings_set_times">Set Meal Times</string>
 
     <string name="settings_24_hour">Use 24-hour format</string>
     <string name="settings_meal_time">Set meal times</string>
     <string name="settings_meal_time_automatic">Automatic</string>
     <string name="settings_meal_time_manual">Manual</string>
+    <string name="settings_time_switch_title">Set meal times manually</string>
+    <string name="settings_time_switch_subtitle">When disabled, the app will track times you commonly set for meals and adjust the boundaries automatically.</string>
+    <string name="settings_set_start_time">Set start time</string>
+    <string name="settings_set_end_time">Set end time</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
 
     <string name="network_error">Error: Network connection failed.</string>
     <string name="generic_error">Error: Please try again.</string>
